2001-03-23  Christophe Merlet  <redfox@eikonex.org>

	* fr.po: Updated French translation and converted to UTF8.

2001-03-23  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>

	* sk.po: Added preliminary version of Slovak glossary. Only 
	terms without translation problems are translated. For now, 
	the encoding is UTF-8.

2001-03-23  Christophe Merlet  <redfox@eikonex.org>

	* fr.po: Added preliminary French translation.
	* glossary.pot: Updated.

2001-03-23	Michael Twomey	<michael.twomey@ireland.sun.com>

	* Created a .csv file from the Gnumeric glossary since this is much
	easier to work with. No more XML scipts and the .csv file can be
	edited by hand if necessary. The .csv is separated using | and all
	the text is quoted using ". The other advantage is that if we keep
	it in UTF-8 we can have all locales in it if we want :).
	
	* Removed .gnumeric file. It was just a pain to work with (sorry
	Simos, undid all your hard work).
	
	* Created an simple script, csv-to-pot.sh to convert the .csv file
	to a .po/.pot file. Simply run it as csv-to-pot.sh GnomeGlossary.csv
	> myfile.po.

2001-03-01  Simos Xenitellis  <simos@hellug.gr>

	* .cvsignore: Added the "messages" file.

	* el.po: Added Greek translation.

	* xml-i18n-glossary-tool.pl: Small update, now it honors
	the glossary file parameter.

	* glossary.pot: Generated .pot file from GnomeGlossary.gnumeric
	You may use this for translations. You may regenerate with
	"perl xml-i18n-glossary-tool.pl --pot GnomeGlossary.gnumeric"

	* xml-i18n-glossary-tool.pl: Added perl script
	that extracts the terms of the GnomeGlossary.gnumeric
	file into a .po file.

	* README.glossary.tool: Added README.glossary.tool
	that describes the xml-i18n-glossary-tool.pl
	Perl script.

2001-02-09 Michael Twomey <michael.twomey@ireland.sun.com>

	* One of Sun's linguists (thanks Gabrielle) has pruned out a lot 
	of the terms. She has also filled in definitions for a lot of the
	terms too.
