@@ -1,3 +1,8 @@
+2001-03-23  Simos Xenitellis  <simos@hellug.gr>
+
+	* README.glossary.tool, xml-i18n-glossary-tool.pl: Removed
+	outdated files. (Can be found in gnome-i18n/el/).
+
 2001-03-23  Christophe Merlet  <redfox@eikonex.org>
 
 	* fr.po: Updated French translation and converted to UTF8.
